[package]
name = "jkit_math"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Johan Helsing <johanhelsing@gmail.com>"]
repository = "https://github.com/johanhelsing/jkit_math"

[dependencies]
bevy = { version = "0.12", default-features = false }

[dev-dependencies]
approx = "0.5"
